--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -5,7 +5,7 @@
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
         <link rel="stylesheet" type="text/css" href="css/index.css">
-        <title>Hello World</title>
+        <title>WarSim</title>
     </head>
     <body>
             <canvas id="canvas"></canvas>        
