--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -8,7 +8,8 @@
         <title>WarSim</title>
     </head>
     <body>
-            <canvas id="canvas"></canvas>        
+            <canvas id="canvas"></canvas>
+        <script src="js/gifler.js"></script>  
         <script type="module" src="js/index.js"></script>
         <script type="text/javascript" src="cordova.js"></script>
     </body>
