typescript tsc added

--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,7 @@
     <body>
             <canvas id="canvas"></canvas>
         
-        <script type="module" src="js/index.ts"></script>
+        <script type="module" src="js/index.js"></script>
         <script type="text/javascript" src="cordova.js"></script>
     </body>
 </html>
