--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,25 @@
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/index.css">
         <title>WarSim</title>
     </head>
     <body>
+        <div id="player-status-bar">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <p id="health"></p>
+                    </div>
+                    <div class="col-sm-6">
+                            <p id="coins"></p>
+                    </div>
+                </div>
+            </div>
+        </div>
         <canvas id="canvas"></canvas>
+        <div id="player-unit-bar"></div>
         <script type="module" src="js/index.js"></script>
         <script type="text/javascript" src="cordova.js"></script>
     </body>
